// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`代码块控制条开启测试 当defaultExpand变化时，内部展开、折叠状态受控: defaultExpand变为false，内部自动折叠 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,74 +19,7 @@
          >
            Running
          </span>
        </div>
      </div>
-     <div
-       class="container code-group-item--normal hide-indicator"
-       data-testid="code_block"
-     >
-       <div
-         class="code-area"
-         dir="ltr"
-       >
-         <div
-           class="header"
-         >
-           <div
-             class="text"
-           >
-             <div
-               class="icon"
-             />
-             compute
-           </div>
-           <div
-             class="actions"
-           >
-             <div
-               class="item"
-             >
-               <div
-                 class="icon hoverable"
-                 data-testid="code_block_copy"
-               >
-                 <div
-                   class="img"
-                 />
-               </div>
-             </div>
-             <div
-               class="item"
-             >
-               <div
-                 class="icon hoverable"
-                 data-testid="code_block_mode_switch"
-               >
-                 <div
-                   class="img"
-                 />
-               </div>
-             </div>
-           </div>
-         </div>
-         <div
-           class="content content--compute"
-         >
-           <pre
-             class="container language-compute"
-           >
-             <code
-               class="language-compute"
-             >
-               print('A')
-
-             </code>
-           </pre>
-         </div>
-       </div>
-     </div>
-     <br
-       class="container wrapper non-select"
-     />
    </div>
  </DocumentFragment>"
`;

exports[`代码块控制条开启测试 当没有完成时展示加载状态: 变成完成态，加载状态消失 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -42,19 +42,20 @@
      />
      <div
        class="container light"
      >
        <div
-         class="loading"
+         class="button hoverable"
+         data-testid="code-bar"
        >
          <div
-           class="icon rotating"
+           class="title"
+         >
+           Show Detail
+         </div>
+         <div
+           class="icon"
          />
-         <span
-           class="loadingName"
-         >
-           Running
-         </span>
        </div>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`代码块控制条开启测试 当没有完成时展示加载状态: 末尾代码块后追加任意文本，加载状态消失 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -42,19 +42,30 @@
      />
      <div
        class="container light"
      >
        <div
-         class="loading"
+         class="button hoverable"
+         data-testid="code-bar"
        >
          <div
-           class="icon rotating"
+           class="title"
+         >
+           Show Detail
+         </div>
+         <div
+           class="icon"
          />
-         <span
-           class="loadingName"
+       </div>
+     </div>
+     
+
+     <div
+       class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
      >
-           Running
-         </span>
+       最后一行
      </div>
-     </div>
+     <br
+       class="container wrapper non-select"
+     />
    </div>
  </DocumentFragment>"
`;

exports[`代码块控制条开启测试 当没有完成时展示加载状态: 非末尾是完成态，末尾是加载态 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一个代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Show Detail
        </div>
        <div
          class="icon"
        />
      </div>
    </div>
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第二个代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="loading"
      >
        <div
          class="icon rotating"
        />
        <span
          class="loadingName"
        >
          Running
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`代码块控制条开启测试 点击可以展开折叠: 点击展开 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,14 +13,81 @@
          data-testid="code-bar"
        >
          <div
            class="title"
          >
-           Show Detail
+           Hide Detail
+         </div>
+         <div
+           class="icon reverse"
+         />
        </div>
+     </div>
+     <div
+       class="container code-group-item--normal hide-indicator"
+       data-testid="code_block"
+     >
+       <div
+         class="code-area"
+         dir="ltr"
+       >
+         <div
+           class="header"
+         >
            <div
+             class="text"
+           >
+             <div
                class="icon"
              />
+             plaintext
            </div>
+           <div
+             class="actions"
+           >
+             <div
+               class="item"
+             >
+               <div
+                 class="icon hoverable"
+                 data-testid="code_block_copy"
+               >
+                 <div
+                   class="img"
+                 />
                </div>
+             </div>
+             <div
+               class="item"
+             >
+               <div
+                 class="icon hoverable"
+                 data-testid="code_block_mode_switch"
+               >
+                 <div
+                   class="img"
+                 />
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
+           class="content content--plaintext"
+         >
+           <pre
+             class="container language-plaintext"
+           >
+             <code
+               class="language-plaintext"
+             >
+               print('A')
+
+             </code>
+           </pre>
+         </div>
+       </div>
+     </div>
+     <br
+       class="container wrapper non-select"
+     />
    </div>
  </DocumentFragment>"
`;

exports[`代码块控制条开启测试 点击可以展开折叠: 点击折叠 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,81 +13,14 @@
          data-testid="code-bar"
        >
          <div
            class="title"
          >
-           Hide Detail
-         </div>
-         <div
-           class="icon reverse"
-         />
+           Show Detail
          </div>
-     </div>
-     <div
-       class="container code-group-item--normal hide-indicator"
-       data-testid="code_block"
-     >
-       <div
-         class="code-area"
-         dir="ltr"
-       >
-         <div
-           class="header"
-         >
          <div
-             class="text"
-           >
-             <div
            class="icon"
          />
-             plaintext
        </div>
-           <div
-             class="actions"
-           >
-             <div
-               class="item"
-             >
-               <div
-                 class="icon hoverable"
-                 data-testid="code_block_copy"
-               >
-                 <div
-                   class="img"
-                 />
      </div>
-             </div>
-             <div
-               class="item"
-             >
-               <div
-                 class="icon hoverable"
-                 data-testid="code_block_mode_switch"
-               >
-                 <div
-                   class="img"
-                 />
-               </div>
-             </div>
-           </div>
-         </div>
-         <div
-           class="content content--plaintext"
-         >
-           <pre
-             class="container language-plaintext"
-           >
-             <code
-               class="language-plaintext"
-             >
-               print('A')
-
-             </code>
-           </pre>
-         </div>
-       </div>
-     </div>
-     <br
-       class="container wrapper non-select"
-     />
    </div>
  </DocumentFragment>"
`;

exports[`代码块控制条开启测试 相邻的一组代码块允许开启压缩多代码块的能力 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一组代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--begin hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('A')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <div
      class="container code-group-item--end hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('B')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第二组代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('C')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第三组代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('D')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`代码块控制条开启测试 相邻的一组代码块共用一个控制条 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一组代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('A')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('B')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第二组代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('C')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`代码块控制条开启测试 相邻的一组代码块，可以禁用合并能力，每个代码块独自有控制条 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一组代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('A')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('B')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第二组代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('C')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`代码块控制条开启测试 设置默认不展开，设置文案 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          can expand fake text
        </div>
        <div
          class="icon"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`代码块控制条开启测试 设置默认展开 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="container light"
    >
      <div
        class="button hoverable"
        data-testid="code-bar"
      >
        <div
          class="title"
        >
          Hide Detail
        </div>
        <div
          class="icon reverse"
        />
      </div>
    </div>
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('hello world')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`基础代码块渲染测试 result语言的代码块隐藏头部，不区分大小写 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="content content--result"
        >
          <pre
            class="container language-ReSult"
          >
            <code
              class="language-ReSult"
            >
              print('B')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`基础代码块渲染测试 围栏式代码块 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀文字
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      这是一个代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            python
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--python"
        >
          <pre
            class="container language-python"
            tabindex="0"
          >
            <code
              class="language-python"
            >
              <span
                class="token keyword"
              >
                print
              </span>
              <span
                class="token punctuation"
              >
                (
              </span>
              <span
                class="token string"
              >
                'hello world'
              </span>
              <span
                class="token punctuation"
              >
                )
              </span>
              

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      后缀文字
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`基础代码块渲染测试 缩进式代码块（屏蔽语法） 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀文字
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      print('hello world')
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      后缀文字
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`基础代码块渲染测试 缩进式代码块，主动启用 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀文字
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print('hello world')

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      后缀文字
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`基础代码块渲染测试 自定义渲染代码块 + 高亮渲染器 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      前缀文字
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      这是一个代码块：
    </div>
    <br
      class="container wrapper non-select"
    />
    <div
      class="custom-codeblock language-python code-group-item--normal"
    >
      Code Bar Header: python
      <div
        class="custom-codeblock-highlighter language-python"
      >
        language: pythoncode: print('hello world')

      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      后缀文字
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`复制功能测试 点击按钮展示成功状态，并且成功复制内容: 3s后切换回原样式 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`复制功能测试 点击按钮展示成功状态，并且成功复制内容: 切换成了对勾样式 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`语言高亮测试 大写仍然能高亮 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            PYTHON
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--python"
        >
          <pre
            class="container language-PYTHON"
          >
            <code
              class="language-PYTHON"
            >
              <span
                class="token keyword"
              >
                print
              </span>
              <span
                class="token punctuation"
              >
                (
              </span>
              <span
                class="token string"
              >
                'hello world'
              </span>
              <span
                class="token punctuation"
              >
                )
              </span>
              

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;
